--- a/index.html
+++ b/index.html
@@ -4,18 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>javascript practise</title>
-    <!--  css file link -->
-    <link rel="stylesheet" href="style.css">
+    <title>logo design</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1>Hello world!</h1>
-    <button onclick="handleClick()" class="button">Time and date </button>
-    <div class="content"> 
-        <h3 id="content">click the button for show time </h3>
-    <h2 id="time"></h2>
-    </div>
-    <!-- js file link  -->
-    <script src="./script.js"></script>
+    <!--  start code  -->
+    <!--  main container -->
+        <div class="container">
+            <div class="logo">
+                <img src="https://th.bing.com/th?q=FB+Logo+Transparent&w=120&h=120&c=1&rs=1&qlt=90&cb=1&pid=InlineBlock&mkt=en-WW&cc=BD&setlang=en&adlt=moderate&t=1&mw=247" alt="facebook logo " />  <h2>facebook</h2>
+                <div class="desc">
+                    <p>
+                        Facebook helps you connect and share with the people in your life.
+                    </p>
+                </div>
+            </div>
+             <!--  login box -->
+             <div class="rightContent"> 
+                <div class="loginBox">
+                    <div class="loginInput">
+                        <input type="email"  placeholder="Email address or phone number "/>
+                        <input type="password" placeholder="Password" />
+                        <!-- loginBtn -->
+                        <div class="loginBtn">
+                            <button>Log In</button>
+                        </div>
+                        <!-- forgetPassword -->
+                        <div class="forgetPassword">
+                            <a href="">Forgotten password?</a>
+                        </div>
+                        <!--  create a new Account Button -->
+                        <div class="createNewAccount">
+                                <button>Create new account</button>
+                        </div>
+                        <!--  createNewAccount end div -->
+                    </div>
+                </div>
+                  <!--  login box end -->
+                  <!-- Create a Page for a celebrity, brand or business. -->
+                        <div class="CreateAPage">
+                            <h3><a href="" class="page">  Create a Page </a> for a celebrity, brand or business.</h3>
+                        </div>
+                  <!-- end Create a Page for a celebrity, brand or business. -->
+
+                            </div>
+            </div>
+        </div>
+
+    <!--  container end -->
+
+
+    <!--  end code -->
+    
 </body>
 </html>
